--- a/project-wt/jobfind/tsconfig.json
+++ b/project-wt/jobfind/tsconfig.json
@@ -8,7 +8,6 @@
     "noImplicitAny": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
@@ -16,6 +15,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noImplicitReturns": false,
     "target": "es2017",
     "module": "es2020",
     "lib": [
